--- a/medi.html
+++ b/medi.html
@@ -1,5 +1,5 @@
 <html>
-    <title>Testing Code</title>
+    <title>Test Samle Codes</title>
     <body>
         <p>HI Im testing Code For Study Purpose</p>
     </body>
